# Workflow-copilot

./: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
samples/: messages.sample.json
src/: cli.ts  config.ts  graphClient.ts  index.ts  planner.ts  types.ts
src/analyzers/: openAiAnalyzer.ts  ruleBasedAnalyzer.ts  types.ts
src/teams_ai_planner/: __init__.py  analyzer.py  cli.py  config.py  graph.py  heuristics.py  models.py  planner.py
src/teams_ai_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
